--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>Humane Teams</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/black.css">
@@ -22,10 +22,9 @@
 		</script>
 	</head>
 	<body>
-		<div class="reveal">
+		<div class="reveal none center">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section data-markdown="presentation-201708-pivotal.md" data-separator-vertical="^\n\n" data-separator="^\n-{4,}" data-notes="^Note:"></section>
 			</div>
 		</div>
 
